Added Github link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <p>This is an archive of the Production Notes column from <strong>Doctor Who Magazine</strong>. The column has been written by the showrunners of <em>Doctor Who</em> since its revival &mdash; Russell T Davies (2004-2009, 2023-2025), Steven Moffat (2010-2017), and Chris Chiball (2017-2023).</p>
-<p>These articles were transcribed by <a href="https://www.reddit.com/user/The_Silver_Avenger/">/u/The_Silver_Avenger</a> on the <a href="https://www.reddit.com/r/gallifrey/">/r/gallifrey</a> subreddit, and this page was created by <a href="https://rileyrouth.com">Riley Routh</a>. You can contribute to the data entry effort on GitHub.</p>
+<p>These articles were transcribed by <a href="https://www.reddit.com/user/The_Silver_Avenger/">/u/The_Silver_Avenger</a> on the <a href="https://www.reddit.com/r/gallifrey/">/r/gallifrey</a> subreddit, and this page was created by <a href="https://rileyrouth.com">Riley Routh</a>. You can contribute to the data entry effort on <a href="https://github.com/rileyrouth/productionnotes/">GitHub</a>.</p>
 <div class="posts">
     {% for post in site.posts %}
     <a href="{{ post.url }}">
